--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+.main {
+  background-color: #45474B;
+  width: 55vw;
+  color: white;
+  margin-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  padding: 5%;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn {
+  width: 100px;
+  height: 30px;
+  padding: 2%;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inputWrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.inputForm{
+  padding: 10px;
+  border: none;
+  margin-top: 8px;
+  margin-bottom: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+label{
+  font-size: large;
+  font-weight: 500;
+  margin-bottom: 5px;
+  margin-top: 10px;
+}
+
+.btnWrapper{
+  display: flex;
+  gap: 10px;
+}
+
+.card{
+  background-color: aliceblue;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 10px;
+  color: black;
+
+}
+
+@media only screen and (max-width: 450px) {
+
+  .main {width: 80vw}
 }
